--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -2,10 +2,14 @@ micronaut:
   application:
     name: core
   #enable https
-  #server:
-    #ssl:
-      #port: 8080
-      #enabled: true
+  server:
+    ssl:
+      enabled: true
+      build-self-signed: true
+    port: 10000
+    cors:
+      enabled: true
+      single-header: true
 
   security:
     authentication: bearer
@@ -21,7 +25,7 @@ micronaut:
 
 datasources:
   default:
-    url: jdbc:mysql://localhost:3306/masterdata
+    url: jdbc:mysql://localhost:10100/masterdata
     driverClassName: com.mysql.cj.jdbc.Driver
     username: 'test'
     password: 'pwciaociao'
