--- a/md/build.gradle
+++ b/md/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation("mysql:mysql-connector-java")
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation project (":baseLibrary")
+    implementation project (":foundation")
     compileOnly("jakarta.persistence:jakarta.persistence-api:3.0.0")
     annotationProcessor("io.micronaut:micronaut-inject-java:1.0.0")
 }
